--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Morit Grimm's Developer Website</title>
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/variables.css">
 </head>
+
 <body>
-    <h1>My portfolio website</h1>
-    <p>My name is Moritz Grimm and this is my first iteration of my own porfolio website</p>
+    <header>
+        <div class="container">
+            <h1>Moritz Grimm</h1>
+            <p class="subtitle">Aspiring Software Developer</p>
+        </div>
+    </header>
+    <nav>
+        <div class="container">
+            <ul>
+                <li class="nav-item"><a href=#about>About me</a></li>
+                <li class="nav-item"><a href=#projects>My Projects</a></li>
+                <li class="nav-item"><a href=#contact>Contact</a></li>
+            </ul>
+        </div>"
+    </nav>
+
+    <main>
+        <section id="about" class="container">
+            <h2>About me</h2>
+            <p>Hi, I'm <b>Moritz</b>!<br>
+                I'm a <b>17 years old</b> software developer from <b>Germany</b> and currently a trainee at <b>ADITO Software GmbH</b>. My
+                main programming language at work is <b>JavaScript</b>, but for my latest private project, I'm working
+                with <b>C#</b> and <b>Flutter</b>. <br>
+                You can find the corresponding GitHub repository here: <br>
+                <a class="hyperlink" href="https://github.com/Moritz-Grimm/Timebooking-Calculator-2.0">👉 Timebooking-Calculator 2.0</a>
+            </p>
+        </section>
+
+        <section id="projects" class="container">
+            <h2>My Projects</h2>
+            <div class="project-grid">
+                <div class="project-card">
+                    <h3>Timebooking-Calculator</h3>
+                    <p>Insert description here</p>
+                    <a href="projects/timebooking-calculator.html">👉 Check it out</a>
+                </div>
+                <div class="project-card">
+                    <h3>KI supported weather app</h3>
+                    <p>Insert description here</p>
+                </div>
+            </div>
+        </section>
+        <section id="contact" class="container">
+            <h2>Contact</h2>
+            <a class="icon-link" href="https://github.com/Moritz-Grimm">
+                <svg class="icon-link svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24">
+                    <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                </svg>
+            </a>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Moritz Grimm. All rights reserved</p>
+        </div>
+    </footer>
 </body>
+
 </html>
